--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <button data-tooltip="Change the theme" id="themebtn">☀️</button>
             <button data-tooltip="Toggle display mode" id="rotatebtn">🔄</button>
         </div>
-        <footer id="footer">© 2021 Shane Paton</footer>
+        <footer id="footer">
+            <span>Version 1.0.0 </span>
+            <span>© 2021 Shane Paton</span>
+        </footer>
     </body>
 </html>
